# pgvecto.rs

./: Cargo.toml
.github/workflows/: release.yml
crates/acron/: Cargo.toml
crates/acron/src/: lib.rs
crates/base/src/: index.rs  search.rs  worker.rs
crates/base/src/vector/: svecf32.rs
crates/index/: Cargo.toml
crates/index/src/: indexing.rs  lib.rs
crates/quantization/src/: lib.rs  operator.rs
crates/quantization/src/sparse/: mod.rs  operator.rs
crates/service/src/: instance.rs  worker.rs
src/: error.rs
src/bgworker/: normal.rs
src/gucs/: executing.rs
src/index/: am.rs  am_options.rs  am_scan.rs  utils.rs
src/ipc/: mod.rs
src/sql/: finalize.sql
tests/sqllogictest/: acron.slt  hnsw.slt  multicolumn.slt
