[package]
name = "acron"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
bytemuck.workspace = true
crc32fast.workspace = true
parking_lot.workspace = true

base = { path = "../base" }
common = { path = "../common" }
quantization = { path = "../quantization" }
rayon = { path = "../rayon" }
storage = { path = "../storage" }

[lints]
workspace = true
